--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello humans</h1>
+<h1>Hello humans! its a a beautiful day to eat shit :)</h1>
 </body>
 </html>
